profilelist1exp/unpackaged/objects/Sales_Connect_User__c.object
<CustomObject>
    <fields>
        <fullName>Badge_ID__c</fullName>
        <externalId>true</externalId>
        <label>Badge ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsSpecialistActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsSpecialistActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUserActive__c</fullName>
        <formula>IF( User__r.IsActive = true, &apos;true&apos;, &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsUserActive</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Business_Unit__c</fullName>
        <label>Segment Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_LOB__c</fullName>
        <label>Services LOB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialization__c</fullName>
        <label>Specialization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Connect_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Verticals__c</fullName>
        <label>Verticals</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sales Connect User</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IsSpecialistActive__c</columns>
        <columns>Specialization__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Sales Connect User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Connect Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>